# RKTools

./: CMakeLists.txt  Core.hpp  README.md  menu.cpp
core/: Core.hpp  Definitions.hpp  menu.cpp  toolsList.hpp
image/image-to-ascii/: Makefile  imageToAscii.cpp  imageToAscii.hpp
